Fix Background Bug
Fixed a bug with the background where if the resume is too large height wise the overlay won't cover the bottom half of the extended background.

--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -23,7 +23,7 @@
       position: relative;
       text-align: left;
       padding-left:100px;
-      font-size: 1.8vh;
+      font-size: 2vh;
       top: 15%;
       overflow: auto;
       color: rgb(175, 175, 175);
