--- a/src/Contact.css
+++ b/src/Contact.css
@@ -25,7 +25,7 @@
     position: relative;
     text-align: left;
     padding-left:100px;
-    font-size: 3.0vh;
+    font-size: 2vh;
     top: 15%;
     overflow: auto;
     color: rgb(175, 175, 175);
