--- a/src/Resume.css
+++ b/src/Resume.css
@@ -23,7 +23,7 @@
         position: relative;
         text-align: left;
         padding-left:100px;
-        font-size: 3.0vh;
+        font-size: 2vh;
         top: 15%;
         overflow: auto;
         color: rgb(175, 175, 175);
@@ -56,4 +56,10 @@
         }
     }
 
+
+
    
+    .resume {
+      max-height: 90vh; 
+      overflow-y: scroll; 
+    }
